adding live player count and haproxy socket stats
Change-Id: Ia7a584f0bfdd3acd4caa98ad9cf7945fcc288200

--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -1,11 +1,13 @@
 global
     maxconn     4096 # Total Max Connections. This is dependent on ulimit
     nbproc      1
+    stats socket /var/run/haproxy.sock user goxwhales level user
 
 defaults
     mode        http
     stats enable
     stats uri /specialstats123
+    option socket-stats
 
 frontend all 0.0.0.0:80
     timeout client 50000
